updated subscribe and contact section

--- a/css/style.css
+++ b/css/style.css
@@ -883,7 +883,7 @@ div.carousel-inner .item img {
 -----------------------------------------*/
 
 .subscribe {
-    background-image: url(../images/subscribe.jpg);
+    background-image: url(../images/macbook.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
