--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ p {
     bottom: -20px;
     width: 60px;
     height: 1px;
-    background-color: #528E7C;
+    background-color: #00C5B8;
     left: 50%;
     margin-left: -30px;
 }
@@ -99,7 +99,7 @@ p {
         font-family: 'Raleway', sans-serif;
     }
     .navbar-default .navbar-nav>li>a:hover {
-        color: #528E7C;
+        color: #00C5B8;
     }
     .navbar-default .navbar-nav>li>a:focus {
         color: #B5B5B5;
@@ -138,7 +138,7 @@ p {
 .navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>.active>a:focus {
     background: transparent;
-    color: #528E7C;
+    color: #00C5B8;
 }
 .header {
     background: url(../images/sanfran.png);
@@ -194,8 +194,8 @@ p {
 .home-btn:active,
 .home-btn:visited {
     background: transparent;
-    border-color: #528E7C;
-    color: #528E7C;
+    border-color: #00C5B8;
+    color: #00C5B8;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 30px;
@@ -209,7 +209,7 @@ p {
     transition: all 1s;
 }
 .home-btn:hover {
-    background-color: #528E7C;
+    background-color: #00C5B8;
     color: #fff;
 }
 .tuor,
@@ -233,7 +233,7 @@ tuor:visited {
 .tuor i {
     font-size: 20px;
     padding-left: 5px;
-    color: #528E7C;
+    color: #00C5B8;
 }
 
 
@@ -266,7 +266,7 @@ tuor:visited {
     bottom: -12px;
     left: 0;
     width: 70px;
-    background: #528E7C;
+    background: #00C5B8;
     height: 1px;
 }
 .inner_about_title p {
@@ -303,7 +303,7 @@ tuor:visited {
     font-size: 15px;
 }
 .single_about_area:hover div i {
-    color: #528E7C;
+    color: #00C5B8;
 }
 .about_phone img {} @media (min-width: 991px) and (max-width: 1200px) {
     .about_phone img {
@@ -338,7 +338,7 @@ tuor:visited {
     bottom: -12px;
     left: 0;
     width: 70px;
-    background: #528E7C;
+    background: #00C5B8;
     height: 1px;
 }
 .video_title p {
@@ -364,9 +364,9 @@ tuor:visited {
     transition: all 1s;
 }
 .btn-video:hover {
-    background: #528E7C;
+    background: #00C5B8;
     color: #fff;
-    border: 1px solid #528E7C;
+    border: 1px solid #00C5B8;
 }
 .video {} .video iframe {
     width: 100%;
@@ -401,7 +401,7 @@ tuor:visited {
     bottom: -8px;
 }
 div.carousel-inner .item img {
-    border: 2px solid #528E7C;
+    border: 2px solid #00C5B8;
     border-radius: 50%;
     padding: 3px;
 }
@@ -415,14 +415,14 @@ div.carousel-inner .item img {
     padding-top: 50px;
 }
 .testimonial_caption h2 {
-    color: #528E7C;
+    color: #00C5B8;
     text-transform: uppercase;
     font-weight: 900;
     font-size: 30px;
     margin-top: 25px;
 }
 .testimonial_caption h4 {
-    color: #528E7C
+    color: #00C5B8
 }
 .testimonial_caption h4 span {
     color: #D8D8D8;
@@ -432,14 +432,14 @@ div.carousel-inner .item img {
 .testimonial ol.carousel-indicators li {
     width: 12px;
     height: 12px;
-    border: 1px solid #528E7C;
+    border: 1px solid #00C5B8;
     margin: 1PX
 }
 .testimonial ol.carousel-indicators li.active {
     width: 12px;
     height: 12px;
-    border: 0px solid #528E7C;
-    background: #528E7C;
+    border: 0px solid #00C5B8;
+    background: #00C5B8;
 }
 /*---------------------------------------
    SECTION FEATURES
@@ -464,7 +464,7 @@ div.carousel-inner .item img {
 .right_single_feature div {
     position: absolute;
     font-size: 40px;
-    color: #528E7C;
+    color: #00C5B8;
     left: 0;
     width: 90px;
     height: 90px;
@@ -479,7 +479,7 @@ div.carousel-inner .item img {
     color: #333333;
 }
 .right_single_feature h3 span {
-    color: #528E7C;
+    color: #00C5B8;
 }
 .right_single_feature p {
     color: #333;
@@ -499,7 +499,7 @@ div.carousel-inner .item img {
 .left_single_feature div {
     position: absolute;
     font-size: 40px;
-    color: #528E7C;
+    color: #00C5B8;
     right: 0;
     width: 90px;
     height: 90px;
@@ -514,7 +514,7 @@ div.carousel-inner .item img {
     color: #333333;
 }
 .left_single_feature h3 span {
-    color: #528E7C;
+    color: #00C5B8;
 }
 .left_single_feature p {
     color: #333;
@@ -564,8 +564,8 @@ div.carousel-inner .item img {
 .btn-action:active,
 .btn-action:focus,
 .btn-action:visited {
-    background: #528E7C;
-    border: 1px solid #528E7C;
+    background: #00C5B8;
+    border: 1px solid #00C5B8;
     color: #fff;
     border-radius: 3px;
     padding: 15px 35px;
@@ -602,12 +602,12 @@ div.carousel-inner .item img {
     -moz-border-radius: 20px;
     border-radius: 20px;
     background: transparent;
-    border: 1px solid #528E7C;
+    border: 1px solid #00C5B8;
 }
 .owl-theme .owl-controls .owl-page.active span,
 .owl-theme .owl-controls.clickable .owl-page:hover span {
     opacity: 1;
-    background: #528E7C;
+    background: #00C5B8;
 }
 /*---------------------------------------
    SECTION FUN FACTS
@@ -626,7 +626,7 @@ div.carousel-inner .item img {
     font-family: 'Source Sans Pro', sans-serif;
 }
 .single_fun_facts i {
-    color: #528E7C;
+    color: #00C5B8;
     font-size: 60px;
     ;
 }
@@ -691,7 +691,7 @@ div.carousel-inner .item img {
     transition: all 1s;
 }
 .single_store i {
-    color: #528E7C;
+    color: #00C5B8;
     text-align: center;
     opacity: 1;
     font-size: 40px;
@@ -768,8 +768,8 @@ div.carousel-inner .item img {
 
 }
 .contact_form .form-control:focus {
-    border: 1px solid #528E7C;
-    border-color: #528E7C;
+    border: 1px solid #00C5B8;
+    border-color: #00C5B8;
     outline: 0px none;
     box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.075) inset, 0px 0px 0px rgba(102, 175, 233, 0.6);
 }
@@ -794,13 +794,13 @@ div.carousel-inner .item img {
 .submit-btn:focus,
 .submit-btn:visited {
     background-color: transparent;
-    border: 1px solid #528E7C;
+    border: 1px solid #00C5B8;
     border-radius: 4px;
     width: 100%;
     height: 50px;
     text-transform: uppercase;
     font-size: 18px;
-    color: #528E7C;
+    color: #00C5B8;
     -webkit-transition: all 1s;
     -moz-transition: all 1s;
     -o-transition: all 1s;
@@ -808,9 +808,9 @@ div.carousel-inner .item img {
     outline: 0px !important;
 }
 .submit-btn:hover {
-    background-color: #528E7C;
+    background-color: #00C5B8;
     color: #fff;
-    border-color: #528E7C;
+    border-color: #00C5B8;
 }
 .social_icons {
     padding-top: 50px;
@@ -845,12 +845,12 @@ div.carousel-inner .item img {
     font-size: 20px;
 }
 .social_icons ul li a:hover {
-    background: #528E7C;
-    border: 1px solid #528E7C;
+    background: #00C5B8;
+    border: 1px solid #00C5B8;
     color: #fff
 }
 .error {
-    color: #528E7C;
+    color: #00C5B8;
     display: block;
     padding-bottom: 15px;
     font-size: 18px
@@ -927,12 +927,12 @@ div.carousel-inner .item img {
 .subs-btn:visited {
     width: 200px;
     background: transparent;
-    border: 1px solid #528E7C;
+    border: 1px solid #00C5B8;
     border-radius: 4px;
     height: 45px;
     margin-left: 0px;
     margin-bottom: 1px;
-    color: #528E7C;
+    color: #00C5B8;
     text-transform: uppercase;
     font-weight: 600;
     font-size: 17px;
@@ -943,9 +943,9 @@ div.carousel-inner .item img {
     outline: 0px !important;
 }
 .subs-btn:hover {
-    background-color: #528E7C;
+    background-color: #00C5B8;
     color: #fff;
-    border-color: #528E7C;
+    border-color: #00C5B8;
 }
 @media (min-width: 300px) {
     .subscribe_form .form-control {
@@ -970,7 +970,7 @@ div.carousel-inner .item img {
     background-color: #1A1D22;
     padding-bottom: 65px;
     padding-top: 65px;
-    border-bottom: 3px solid #528E7C;
+    border-bottom: 3px solid #00C5B8;
 }
 .copyright h2 {
     height: 0px;
@@ -987,7 +987,7 @@ div.carousel-inner .item img {
 }
 .copy_right_text p a {
     text-decoration: none;
-    color: #528E7C;
+    color: #00C5B8;
 }
 .copy_right_text p span {
     font-weight: 300;
@@ -996,7 +996,7 @@ div.carousel-inner .item img {
     text-align: right;
 }
 .scroll_top a {
-    background: #528E7C;
+    background: #00C5B8;
     padding: 25px;
 }
 .scroll_top a i {
